fixing minor overflow bug

--- a/src/globals.scss
+++ b/src/globals.scss
@@ -4,6 +4,8 @@ html, body {
   margin: 0 auto;
   display: block;
   font-size: 10px;
+  max-width: 100vw;
+  overflow-x: hidden;
 }
 
 * {
